if(USE_SYSTEM_GTEST)
    find_package(GTest)
endif()
if(NOT USE_SYSTEM_GTEST OR NOT GTEST_FOUND)
    message(STATUS "Not using system gtest, using built-in googletest project instead.")
    add_subdirectory(googletest)
    set(GTEST_FOUND TRUE CACHE INTERNAL "TRUE if gtest was found on system or built from source")
    set(GTEST_LIBRARIES gtest CACHE INTERNAL "Target for core gtest library")
    set(GTEST_MAIN_LIBRARIES gtest_main CACHE INTERNAL "Target for gtest library with embedded main functions")
    set(GTEST_BOTH_LIBRARIES gtest gtest_main CACHE INTERNAL "Target for both gtest libraries")
    set(GTEST_INCLUDE_DIRS ${gtest_SOURCE_DIR}/include CACHE INTERNAL "Location of gtest includes")
endif()
